fix form height issus on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -29,6 +29,8 @@ body {
   --min-width-m: min(100% - 1rem, 90em, 90vw);
   --min-width-s: min(100% - 1rem, 50em, 90vw);
 
+  --padding-block: min(8vh, 10rem);
+
   --section-gap: 5rem;
 
   --step--2: clamp(1rem, calc(1rem + 0.10vw), 1.14rem);
@@ -233,7 +235,7 @@ p > a:visited {
 
 .media-element>img {
   inline-size: 100%;
-  height: 600px;
+  height: 500px;
   object-fit: cover;
 }
 
@@ -249,12 +251,6 @@ p > a:visited {
 
 .snaps-inline>* {
   scroll-snap-align: start;
-}
-
-.media-first {
-  position: relative;
-  text-align: center;
-  color: #fff;
 }
 
 .centered {
@@ -296,9 +292,8 @@ p > a:visited {
 .form-section {
   position: relative;
   width: 100%;
-  max-height: 100%;
   margin: 0;
-  padding: 0 0 5rem;
+  padding-block: var(--padding-block);
   filter: brightness(0.95);
 }
 
@@ -306,7 +301,7 @@ p > a:visited {
   content: "";
   position: absolute;
   background-image: url(../../assets/images/vineyard4.jpg);
-  background-position: top middle;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   left: 0;
@@ -332,7 +327,6 @@ p > a:visited {
 }
 .form {
   padding: 1rem;
-  min-height: 200px;
 }
 
 
@@ -350,7 +344,6 @@ textarea {
   font-family: inherit;
   font-size: 14px;
   border: 0;
-  // padding-block: 0.25rem;
 }
 
 .form-button {
